Revision history for Perl extension Metabrik.

1.07
   - new: brik::search and perl::module Briks integrated in main distribution
   - remove: no more metabrik-cpanm, enforce use of standard cpanm

1.06 Fri Feb 27 07:17:59 CET 2015
   - bugfix: shell::command: go trough PATH to find a cmd to run (like less PAGER)
   - bugfix: core::shell: on SIGINT handling, now allows to break multiline and run Commands
   - bugfix: core::shell: allow user to get out of multiline mode by hitting Ctrl+C
   - bugfix: core::shell: better management of Metabrik Commands in multiline mode
   => you can put Metabrik Commands within single quotes anywhere
   - update: shell::script: load Command can take an optional file parameter
   - update: metabrik, shell::rc/script, core::shell: easier handling of rc file loading
   - new: metabrik: --script-rc argument to load a specific rc file for scripts

1.05 Tue Feb 10 08:01:53 CET 2015
   - FEATURE: core::shell: multiline mode do not require lines to end with `\' anymore
   - FEATURE: core::shell: Metabrik commands are directly translated to Perl code
              => Note: no alias support for now, only set, get, run and use are handled
   - bugfix: shell::command: check for error code from `` call
   - bugfix: Metabrik: do not override default Attributes with brik_use_properties
             if already set by brik_properties
   - bugfix: Metabrik: correctly prints help Command details when overriden by subclass
   - new: Metabrik: brik_preinit() creates a datadir directory per Brik 
          if datadir property exists.
   - update: Metabrik: default directory is set to $HOME/metabrik i/o /tmp

1.04 Sun Jan  4 13:07:56 CET 2015
   - bugfix: core::context: don't overwrite $RUN when run Command fails
   - bugfix: core::shell: help Command must not overwrite $RUN variable
   - bugfix: core::log: error Command must return undef, this is the error status
   - new: Metabrik: new_from_brik_init() base method
   - copyright: update to 2015
